# StocasticDiffEq_Simulation

./: .gitignore  AdvatnagToSpectralMethod.ipynb  MiceData.ipynb  MonkeyData.ipynb  NeuralODE.ipynb  NeuralOperator.ipynb  README.md  TimeVariying_AR_Simualtion copy.ipynb  clean_prompt.ipynb  icml_arch.excalidraw  lorenz_x_psd.csv  lorenz_xyz_psd.csv  ornstein_uhlenbeck_how_to_simulate.ipynb  pyproject.toml  requirements.txt  setup.py  tvar_linear_mlp.ipynb
docs/: Makefile  api.rst  changelog.rst  conf.py  index.rst  installation.rst  quickstart.rst
notebooks/: 04_real_data_lfp.ipynb  GatedPINN_raw.ipynb  MiceData.ipynb  MiceData_original.ipynb  MonkeyData.ipynb  PINN ablation_studies copy.ipynb  PINN ablation_studies.ipynb  PINN benchmark.ipynb  bench.ipynb  bench_2 copy.ipynb  bench_2.ipynb  bench_3.ipynb  benchmark_pinn_check.ipynb  model_parameter_report.ipynb  monkey.ipynb  rudra_pinns copy 2.ipynb  rudra_pinns copy.ipynb  rudra_pinns.ipynb
ref/: 1overf_sim.ipynb  90f8aa85-a743-4c8f-8cbc-6ba605e1f5b6.ipynb  90f8aa85-a743-4c8f-8cbc-6ba605e1f5b6_tau.ipynb  90f8aa85-a743-4c8f-8cbc-6ba605e1f5b6_updated.ipynb  DeepLagAttention.ipynb  GatedPINN.ipynb  GatedPINN2.ipynb  GatedPINN_raw.ipynb  MonkeyData.ipynb  TimeVariying_AR_Simualtion.ipynb  benchmark_data_set copy.ipynb  benchmark_data_set.ipynb  far_near_oscillation.ipynb  fixed_linear_transformer.ipynb  mice_eeg_data.ipynb  tvar_linear_mlp.ipynb  tvar_linear_transformer.ipynb  tvar_mlp_benchmark_gated_p.ipynb  tvar_mlp_benchmark_sweep_p.ipynb  tvar_pinn_demo.ipynb  tvar_pinn_demo.py  tvar_pinn_embedding.ipynb  tvar_pinn_pytorch.ipynb  (+2 more)
(+62 files in other folders)
