[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stochastic_dynamics"
version = "0.1.0"
description = "Tools for simulating stochastic processes, chaotic systems, and time-varying autoregressive models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.4.1",
    "scipy==1.17.0",
    "matplotlib==3.10.8",
    "pandas==3.0.0",
    "jax==0.9.0",
    "jaxlib==0.9.0",
    "flax==0.12.2",
    "optax==0.2.6",
    "torch==2.10.0",
    "torchvision==0.25.0",
    "mne==1.11.0",
    "statsmodels==0.14.6",
    "PyWavelets==1.9.0",
    "seaborn==0.13.2",
    "plotly==6.5.2",
    "tqdm==4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ipython",
    "ipykernel",
    "ipywidgets==8.1.8",
    "ipympl==0.10.0",
]
docs = [
    "Sphinx==9.1.0",
    "sphinx-book-theme==1.1.4",
    "sphinx-autodoc-typehints==3.6.2",
    "myst-nb==1.3.0",
    "myst-parser==5.0.0",
    "nbclient==0.10.4",
    "jupyter-cache==1.0.1",
]
